--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,11 @@ bio: Ph.D. in Astrophysics
 # twitter summary info
 #description:
 
+### To run a local server
+### 1. cd into the project folder
+### 2. bundle exec jekyll serve
+### 3. http://localhost:4000
+
 # if it's an external image, update below for true
 # better with square images
 external-image: false
@@ -37,7 +42,7 @@ disqus:
 # facebook: myfacebook
 linkedin: mariodamiano
 github: MDamiano
-twitter: MarioDami
+# twitter: MarioDami
 email: mario.damiano@jpl.nasa.gov
 # google: mygoogle
 # instagram: myinstagram
