--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ disqus:
 # facebook: myfacebook
 linkedin: mariodamiano
 github: MDamiano
-# twitter: MarioDami
+twitter: MarioDami
 email: mario.damiano@jpl.nasa.gov
 # google: mygoogle
 # instagram: myinstagram
