Update contact email and section

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ disqus:
 linkedin: mariodamiano
 github: MDamiano
 twitter: MarioDami
-email: mario.damiano@jpl.nasa.gov
+email: mdamiano91@gmail.com
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
