--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ bio: Ph.D. in Astrophysics
 
 ### To run a local server
 ### 1. cd into the project folder
-### 2. bundle exec jekyll serve
+### 2. bundle exec jekyll serve --config _config.yml,_config-dev.yml
 ### 3. http://localhost:4000
 
 # if it's an external image, update below for true
