Fix mixed content and assets

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ resume: true
 resume-external: false
 resume-url: assets/Mario_Damiano_CV.pdf
 
-url: http://MDamiano.github.io
+url: https://MDamiano.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
